--- a/src/shared/components/Button/Button.css
+++ b/src/shared/components/Button/Button.css
@@ -1,12 +1,10 @@
 .button {
-  border-radius: 6px;
-  padding: 0.6em 1.2em;
-  font-family: inherit;
-  cursor: pointer;
-  transition: background 0.25s;
-  font-size: 1rem;
-  border: none;
+    border: 2px solid var(--Primary-400, rgba(123, 110, 246, 1));
+    border-radius: 12px;
+    background: var(--Primary-400, rgba(123, 110, 246, 1));
+    padding: 16px 32px 16px 32px;
 }
+
 .button:hover {
   background: #1d24a8;
 }
