--- a/src/shared/components/Header/Header.css
+++ b/src/shared/components/Header/Header.css
@@ -1,4 +1,12 @@
 .header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+.header-content {
     backdrop-filter: blur(40px);
     background: rgba(18, 24, 41, 0.8);
     display: flex;
